--- a/less/header.css
+++ b/less/header.css
@@ -1,7 +1,10 @@
-.header {
-  display: flex;
-  justify-content: space-around;
+header .header-img {
+  margin-top: 5%;
+  width: 100%;
+  position: relative;
 }
-.header a {
-  text-decoration: none;
+header .header-img img {
+  width: 100%;
+  height: auto;
+  opacity: 0.3;
 }
