--- a/less/menu.less
+++ b/less/menu.less
@@ -15,6 +15,7 @@
         font-family: @main-font;
         width: 33.3%;
         padding-top: 2%;
+        text-align: center;
         a{
             text-decoration: none;
             color: @light-blue;
