Impelmented desktop design

--- a/less/index.less
+++ b/less/index.less
@@ -4,3 +4,6 @@
 @import 'reset.less';
 @import 'menu.less';
 @import 'header.less';
+@import 'webgl.less';
+@import 'info.less';
+@import 'footer.less';
