--- a/less/menu.less
+++ b/less/menu.less
@@ -16,6 +16,7 @@
         width: 33.3%;
         padding-top: 2%;
         text-align: center;
+        margin-left: 10%;
         a{
             text-decoration: none;
             color: @light-blue;
@@ -39,6 +40,10 @@
         border: 2px solid @dark-blue;
         background-color: white; 
         color: @dark-blue;
+
+        span{
+            min-width:5%;
+        }
         &:hover {
             border-color: white;
             background-color: @dark-blue;
