--- a/css/index.css
+++ b/css/index.css
@@ -163,6 +163,7 @@ table {
   width: 33.3%;
   padding-top: 2%;
   text-align: center;
+  margin-left: 10%;
 }
 .menu nav a {
   text-decoration: none;
@@ -184,6 +185,9 @@ table {
   border: 2px solid #33495D;
   background-color: white;
   color: #33495D;
+}
+.menu button span {
+  min-width: 5%;
 }
 .menu button:hover {
   border-color: white;
@@ -223,4 +227,87 @@ header .header-container .p2 {
   left: 12%;
   right: 12%;
   font-size: 1rem;
+}
+.webgl {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.webgl iframe {
+  width: 100%;
+  height: 500px;
+  margin-top: 0;
+  pointer-events: none;
+}
+.info1 {
+  display: flex;
+  width: 100%;
+}
+.info1 .info-img {
+  width: 50%;
+}
+.info1 .info-img img {
+  width: 100%;
+  height: 100%;
+}
+.info1 .info-text {
+  background-color: #CCD3D6;
+  width: 50%;
+  text-align: center;
+}
+.info1 .info-text h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 3rem;
+  padding-top: 3%;
+  color: #33495D;
+}
+.info1 .info-text p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5rem;
+  padding: 6%;
+  color: #33495D;
+}
+.info2 {
+  display: flex;
+  width: 100%;
+}
+.info2 .info-text {
+  background-color: #CCD3D6;
+  width: 50%;
+  text-align: center;
+}
+.info2 .info-text h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 3rem;
+  padding-top: 3%;
+  color: #33495D;
+}
+.info2 .info-text p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5rem;
+  padding: 6%;
+  color: #33495D;
+}
+.info2 .info-img {
+  width: 50%;
+}
+.info2 .info-img img {
+  width: 100%;
+  height: 100%;
+}
+footer {
+  font-family: 'Poppins', sans-serif;
+  color: #33495D;
+  display: flex;
+  justify-content: space-around;
+  padding: 2% 10% 2% 10%;
+  word-spacing: 2px;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+footer .phone-num,
+footer .email {
+  text-align: center;
+  width: 100%;
+  letter-spacing: 2px;
 }
