--- a/css/index.css
+++ b/css/index.css
@@ -313,18 +313,15 @@ footer .email {
 .team {
   background-color: #CCD3D6;
   max-width: 100%;
-  height: 450px;
+  height: 580px;
   margin: 9% 10%;
   border-radius: 20px;
 }
 .team .tl {
-  display: flex;
-  flex-direction: column;
   text-align: center;
-  margin-left: auto;
-  width: 50%;
 }
 .team .tl img {
+  text-align: center;
   margin-top: 5%;
   max-width: 20%;
   max-height: 20%;
@@ -333,6 +330,16 @@ footer .email {
   font-family: 'Poppins', sans-serif;
   margin-right: auto;
   text-align: center;
-  margin-top: 3%;
-  padding-right: 3%;
+}
+.team .rect-dev-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 7%;
+}
+.team .rect-dev-wrapper .react-devs img {
+  text-align: center;
+}
+.team .rect-dev-wrapper .react-devs p {
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
 }
