--- a/less/about.less
+++ b/less/about.less
@@ -1,16 +1,13 @@
 .team{
     background-color: @gray;
     max-width:100%;
-    height: 450px;
+    height: 580px;
     margin: 9% 10%;
     border-radius: 20px;
     .tl{
-        display: flex;
-        flex-direction: column;
         text-align: center;
-        margin-left: auto;
-        width: 50%;
         img{
+            text-align: center;
             margin-top: 5%;
             max-width: 20%;
             max-height: 20%;
@@ -19,10 +16,26 @@
             font-family:@main-font;
             margin-right: auto;
             text-align: center;
-            margin-top:3%;
-            padding-right: 3%;
         }
     }
 
+    .rect-dev-wrapper{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 7%;
+        .react-devs{
+            img{
+                text-align: center;
+            }
+            p{
+                font-family:@main-font;
+                text-align: center;
+            }
+        }
+
+    }
+    
+
 }
+
 
