--- a/less/about.less
+++ b/less/about.less
@@ -4,26 +4,46 @@
     height: 700px;
     margin: 9% 10%;
     border-radius: 20px;
-    .tl{
-        text-align: center;
-        img{
+    box-shadow: 5px 10px @dark-blue;
+    .first-row{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        .tl{
+            width: 50%;
             text-align: center;
-            margin-top: 5%;
-            max-width: 20%;
-            max-height: 20%;
+            padding: 9%;
+            img{
+                text-align: center;
+            }
+            p{
+                font-family:@main-font;
+                margin-right: auto;
+                text-align: center;
+            }
         }
-        p{
-            font-family:@main-font;
-            margin-right: auto;
+
+        .backend{
+            padding: 9%;
+            width: 50%;
             text-align: center;
+            p{
+                font-family:@main-font;
+                margin-right: auto;
+                text-align: center;
+            }
         }
     }
+   
 
-    .rect-dev-wrapper{
+    .react-dev-wrapper{
         display: flex;
         justify-content: space-around;
         margin-top: 7%;
+        width: 100%;
         .react-devs{
+            width: 33.3%;
+            padding:3%;
             img{
                 text-align: center;
             }
