added responsive units as variables in less

--- a/less/variables.less
+++ b/less/variables.less
@@ -8,3 +8,10 @@
 //fonts
 @main-font: 'Poppins', sans-serif;
 @special-font: 'Vibur', cursive;
+
+//responsive - tablet
+@tablet: ~'(max-width: 800px)';
+
+//responsive - mobile
+@mobile: ~'(max-width: 500px)';
+
