--- a/css/index.css
+++ b/css/index.css
@@ -153,10 +153,22 @@ table {
   max-width: 1500px;
   margin-top: 5%;
 }
+@media (max-width: 800px) {
+  .menu {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .menu .logo {
   font-family: 'Vibur', cursive;
   font-size: 2rem;
   color: #33495D;
+}
+@media (max-width: 800px) {
+  .menu .logo {
+    font-size: 3rem;
+  }
 }
 .menu nav {
   font-family: 'Poppins', sans-serif;
@@ -164,6 +176,14 @@ table {
   padding-top: 2%;
   text-align: center;
   margin-left: 10%;
+}
+@media (max-width: 800px) {
+  .menu nav {
+    font-size: 1.5rem;
+    width: 100%;
+    margin-top: 3%;
+    margin-left: 0;
+  }
 }
 .menu nav a {
   text-decoration: none;
@@ -185,6 +205,11 @@ table {
   border: 2px solid #33495D;
   background-color: white;
   color: #33495D;
+}
+@media (max-width: 800px) {
+  .menu button {
+    margin-top: 5%;
+  }
 }
 .menu button span {
   min-width: 5%;
@@ -257,7 +282,7 @@ header .header-container .p2 {
 .info1 .info-text h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 3rem;
-  padding-top: 3%;
+  padding-top: 5%;
   color: #33495D;
 }
 .info1 .info-text p {
@@ -265,6 +290,11 @@ header .header-container .p2 {
   font-size: 1.5rem;
   padding: 6%;
   color: #33495D;
+}
+@media (max-width: 800px) {
+  .info1 .info-text p {
+    font-size: 1rem;
+  }
 }
 .info2 {
   display: flex;
@@ -278,7 +308,7 @@ header .header-container .p2 {
 .info2 .info-text h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 3rem;
-  padding-top: 3%;
+  padding-top: 5%;
   color: #33495D;
 }
 .info2 .info-text p {
@@ -286,6 +316,11 @@ header .header-container .p2 {
   font-size: 1.5rem;
   padding: 6%;
   color: #33495D;
+}
+@media (max-width: 800px) {
+  .info2 .info-text p {
+    font-size: 1rem;
+  }
 }
 .info2 .info-img {
   width: 50%;
