--- a/less/info.less
+++ b/less/info.less
@@ -7,6 +7,9 @@
         img{
             width:100%;
             height: 100%;
+            @media @tablet{
+                
+            }
         }
     }
 
@@ -18,7 +21,7 @@
         h1{
             font-family: @main-font;
             font-size: 3rem;
-            padding-top:3%;
+            padding-top:5%;
             color: @dark-blue;
         }
         p{
@@ -26,6 +29,10 @@
             font-size:1.5rem;
             padding:6%;
             color: @dark-blue;
+
+            @media @tablet{
+                font-size: 1rem;
+            }
         }
     }
 }
@@ -41,7 +48,7 @@
         h1{
             font-family: @main-font;
             font-size: 3rem;
-            padding-top:3%;
+            padding-top:5%;
             color: @dark-blue;
         }
         p{
@@ -49,6 +56,9 @@
             font-size:1.5rem;
             padding:6%;
             color: @dark-blue;
+            @media @tablet{
+                font-size: 1rem;
+            }
         }
 
     }
