--- a/less/menu.less
+++ b/less/menu.less
@@ -3,11 +3,19 @@
     justify-content: space-around;
     max-width: 1500px;
     margin-top: 5%;
+    @media @tablet{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
     .logo{
         font-family: @special-font;
         font-size: 2rem;
         color: @dark-blue;
+        @media @tablet{
+            font-size: 3rem;
+        }
     }
 
 
@@ -17,6 +25,12 @@
         padding-top: 2%;
         text-align: center;
         margin-left: 10%;
+        @media @tablet{
+            font-size: 1.5rem;
+            width: 100%;
+            margin-top: 3%;
+            margin-left:0;
+        }
         a{
             text-decoration: none;
             color: @light-blue;
@@ -40,6 +54,9 @@
         border: 2px solid @dark-blue;
         background-color: white; 
         color: @dark-blue;
+        @media @tablet{
+            margin-top: 5%;
+        }
 
         span{
             min-width:5%;
