--- a/less/header.less
+++ b/less/header.less
@@ -19,6 +19,9 @@ header{
             left: 25%;
             right: 25%;
             font-size:3rem;
+            @media @mobile{
+                font-size: 1.7rem;
+            }
         }
         .p1{
             position: absolute;
@@ -26,6 +29,9 @@ header{
             left: 12%;
             right: 12%;
             font-size:1.5rem;
+            @media @mobile{
+                font-size: 1rem;
+            }
         }
         .p2{
             position: absolute;
@@ -33,6 +39,9 @@ header{
             left: 12%;
             right: 12%;
             font-size:1rem;
+            @media @mobile{
+                font-size: 1rem;
+            }
         }
 
         
