--- a/css/index.css
+++ b/css/index.css
@@ -239,6 +239,11 @@ header .header-container h1 {
   right: 25%;
   font-size: 3rem;
 }
+@media (max-width: 500px) {
+  header .header-container h1 {
+    font-size: 1.7rem;
+  }
+}
 header .header-container .p1 {
   position: absolute;
   top: 32%;
@@ -246,12 +251,22 @@ header .header-container .p1 {
   right: 12%;
   font-size: 1.5rem;
 }
+@media (max-width: 500px) {
+  header .header-container .p1 {
+    font-size: 1rem;
+  }
+}
 header .header-container .p2 {
   position: absolute;
   top: 70%;
   left: 12%;
   right: 12%;
   font-size: 1rem;
+}
+@media (max-width: 500px) {
+  header .header-container .p2 {
+    font-size: 1rem;
+  }
 }
 .webgl {
   width: 100%;
@@ -267,17 +282,31 @@ header .header-container .p2 {
   display: flex;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .info1 {
+    flex-direction: column;
+  }
+}
 .info1 .info-img {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .info1 .info-img {
+    width: 100%;
+  }
 }
 .info1 .info-img img {
   width: 100%;
   height: 100%;
 }
 .info1 .info-text {
-  background-color: #CCD3D6;
   width: 50%;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .info1 .info-text {
+    width: 100%;
+  }
 }
 .info1 .info-text h1 {
   font-family: 'Poppins', sans-serif;
@@ -300,10 +329,19 @@ header .header-container .p2 {
   display: flex;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .info2 {
+    flex-direction: column-reverse;
+  }
+}
 .info2 .info-text {
-  background-color: #CCD3D6;
   width: 50%;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .info2 .info-text {
+    width: 100%;
+  }
 }
 .info2 .info-text h1 {
   font-family: 'Poppins', sans-serif;
@@ -325,6 +363,11 @@ header .header-container .p2 {
 .info2 .info-img {
   width: 50%;
 }
+@media (max-width: 500px) {
+  .info2 .info-img {
+    width: 100%;
+  }
+}
 .info2 .info-img img {
   width: 100%;
   height: 100%;
@@ -339,6 +382,11 @@ footer {
   margin-top: 10%;
   margin-bottom: 5%;
 }
+@media (max-width: 500px) {
+  footer {
+    text-align: center;
+  }
+}
 footer .phone-num,
 footer .email {
   text-align: center;
@@ -352,11 +400,18 @@ footer .email {
   margin: 9% 10%;
   border-radius: 20px;
   box-shadow: 5px 10px #33495D;
+  height: auto;
 }
 .team .first-row {
   display: flex;
   justify-content: space-around;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .team .first-row {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .team .first-row .tl {
   width: 50%;
@@ -371,6 +426,11 @@ footer .email {
   margin-right: auto;
   text-align: center;
 }
+@media (max-width: 500px) {
+  .team .first-row .tl p {
+    padding-top: 7%;
+  }
+}
 .team .first-row .backend {
   padding: 9%;
   width: 50%;
@@ -381,15 +441,32 @@ footer .email {
   margin-right: auto;
   text-align: center;
 }
+@media (max-width: 500px) {
+  .team .first-row .backend p {
+    padding-top: 7%;
+  }
+}
 .team .react-dev-wrapper {
   display: flex;
   justify-content: space-around;
   margin-top: 7%;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .team .react-dev-wrapper {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
 .team .react-dev-wrapper .react-devs {
   width: 33.3%;
   padding: 3%;
+}
+@media (max-width: 500px) {
+  .team .react-dev-wrapper .react-devs {
+    width: 50%;
+  }
 }
 .team .react-dev-wrapper .react-devs img {
   text-align: center;
@@ -397,4 +474,9 @@ footer .email {
 .team .react-dev-wrapper .react-devs p {
   font-family: 'Poppins', sans-serif;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .team .react-dev-wrapper .react-devs p {
+    padding-top: 7%;
+  }
 }
