--- a/less/about.less
+++ b/less/about.less
@@ -5,10 +5,15 @@
     margin: 9% 10%;
     border-radius: 20px;
     box-shadow: 5px 10px @dark-blue;
+    height: auto;
     .first-row{
         display: flex;
         justify-content: space-around;
         width: 100%;
+        @media @mobile{
+            flex-direction: column;
+            align-items: center;
+        }
         .tl{
             width: 50%;
             text-align: center;
@@ -20,6 +25,9 @@
                 font-family:@main-font;
                 margin-right: auto;
                 text-align: center;
+                @media @mobile{
+                    padding-top: 7%;
+                }
             }
         }
 
@@ -31,6 +39,9 @@
                 font-family:@main-font;
                 margin-right: auto;
                 text-align: center;
+                @media @mobile{
+                    padding-top: 7%;
+                }
             }
         }
     }
@@ -41,15 +52,26 @@
         justify-content: space-around;
         margin-top: 7%;
         width: 100%;
+        @media @mobile{
+            flex-direction: column;
+            align-items: center;
+            width:100%;
+        }
         .react-devs{
             width: 33.3%;
             padding:3%;
+            @media @mobile{
+                width: 50%;
+            }
             img{
                 text-align: center;
             }
             p{
                 font-family:@main-font;
                 text-align: center;
+                @media @mobile{
+                    padding-top: 7%;
+                }
             }
         }
 
