--- a/less/footer.less
+++ b/less/footer.less
@@ -7,6 +7,9 @@ footer{
     word-spacing: 2px;
     margin-top: 10%;
     margin-bottom: 5%;
+    @media @mobile{
+        text-align: center;
+    }
     .phone-num, .email{
         text-align: center;
         width: 100%;
