--- a/less/info.less
+++ b/less/info.less
@@ -1,22 +1,27 @@
 .info1{
     display: flex;
     width: 100%;
+    @media @mobile{
+        flex-direction: column;
+    }
 
     .info-img{
         width: 50%;
+        @media @mobile{
+            width:100%;
+        }
         img{
             width:100%;
             height: 100%;
-            @media @tablet{
-                
-            }
         }
     }
 
     .info-text{
-        background-color: @gray;
         width: 50%;
         text-align: center;
+        @media @mobile{
+            width:100%;
+        }
 
         h1{
             font-family: @main-font;
@@ -40,11 +45,17 @@
 .info2{
     display: flex;
     width:100%;
+    @media @mobile{
+        flex-direction: column-reverse;
+    }
 
     .info-text{
-        background-color: @gray;
         width: 50%;
         text-align: center;
+        @media @mobile{
+            width:100%;
+        }
+
         h1{
             font-family: @main-font;
             font-size: 3rem;
@@ -66,6 +77,9 @@
 
     .info-img{
         width: 50%;
+        @media @mobile{
+            width:100%;
+        }
         img{
             width:100%;
             height: 100%;
