--- a/css/index.css
+++ b/css/index.css
@@ -239,6 +239,11 @@ header .header-container h1 {
   right: 25%;
   font-size: 3rem;
 }
+@media (max-width: 600px) {
+  header .header-container h1 {
+    font-size: 1.4rem;
+  }
+}
 @media (max-width: 500px) {
   header .header-container h1 {
     font-size: 1.7rem;
@@ -250,6 +255,11 @@ header .header-container .p1 {
   left: 12%;
   right: 12%;
   font-size: 1.5rem;
+}
+@media (max-width: 600px) {
+  header .header-container .p1 {
+    font-size: 1.2rem;
+  }
 }
 @media (max-width: 500px) {
   header .header-container .p1 {
