--- a/less/header.less
+++ b/less/header.less
@@ -19,6 +19,9 @@ header{
             left: 25%;
             right: 25%;
             font-size:3rem;
+            @media @between{
+                font-size:1.4rem;
+            }
             @media @mobile{
                 font-size: 1.7rem;
             }
@@ -29,6 +32,9 @@ header{
             left: 12%;
             right: 12%;
             font-size:1.5rem;
+            @media @between{
+                font-size:1.2rem;
+            }
             @media @mobile{
                 font-size: 1rem;
             }
