--- a/less/index.less
+++ b/less/index.less
@@ -2,6 +2,7 @@
 @import 'mixins.less';
 @import 'fonts.less';
 @import 'reset.less';
+@import 'global.less';
 @import 'menu.less';
 @import 'header.less';
 @import 'webgl.less';
