small changes and added real text

--- a/less/info.less
+++ b/less/info.less
@@ -25,9 +25,12 @@
 
         h1{
             font-family: @main-font;
-            font-size: 3rem;
+            font-size: 2rem;
             padding-top:5%;
             color: @dark-blue;
+            @media @mobile{
+                font-size: 1.5rem;
+            }
         }
         p{
             font-family: @main-font;
@@ -58,9 +61,12 @@
 
         h1{
             font-family: @main-font;
-            font-size: 3rem;
+            font-size: 2rem;
             padding-top:5%;
             color: @dark-blue;
+            @media @mobile{
+                font-size: 1.5rem;
+            }
         }
         p{
             font-family: @main-font;
