--- a/css/index.css
+++ b/css/index.css
@@ -242,16 +242,16 @@ header .header-container h1 {
   top: 5%;
   left: 25%;
   right: 25%;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 @media (max-width: 600px) {
   header .header-container h1 {
     font-size: 1.4rem;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   header .header-container h1 {
-    font-size: 1.7rem;
+    font-size: 0.8rem;
   }
 }
 header .header-container .p1 {
@@ -266,9 +266,9 @@ header .header-container .p1 {
     font-size: 1.2rem;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   header .header-container .p1 {
-    font-size: 1rem;
+    font-size: 0.6rem;
   }
 }
 header .header-container .p2 {
@@ -278,9 +278,9 @@ header .header-container .p2 {
   right: 12%;
   font-size: 1rem;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   header .header-container .p2 {
-    font-size: 1rem;
+    font-size: 0.5rem;
   }
 }
 .webgl {
@@ -297,7 +297,7 @@ header .header-container .p2 {
   display: flex;
   width: 100%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info1 {
     flex-direction: column;
   }
@@ -305,7 +305,7 @@ header .header-container .p2 {
 .info1 .info-img {
   width: 50%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info1 .info-img {
     width: 100%;
   }
@@ -318,16 +318,21 @@ header .header-container .p2 {
   width: 50%;
   text-align: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info1 .info-text {
     width: 100%;
   }
 }
 .info1 .info-text h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   padding-top: 5%;
   color: #33495D;
+}
+@media (max-width: 300px) {
+  .info1 .info-text h1 {
+    font-size: 1.5rem;
+  }
 }
 .info1 .info-text p {
   font-family: 'Poppins', sans-serif;
@@ -344,7 +349,7 @@ header .header-container .p2 {
   display: flex;
   width: 100%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info2 {
     flex-direction: column-reverse;
   }
@@ -353,16 +358,21 @@ header .header-container .p2 {
   width: 50%;
   text-align: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info2 .info-text {
     width: 100%;
   }
 }
 .info2 .info-text h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   padding-top: 5%;
   color: #33495D;
+}
+@media (max-width: 300px) {
+  .info2 .info-text h1 {
+    font-size: 1.5rem;
+  }
 }
 .info2 .info-text p {
   font-family: 'Poppins', sans-serif;
@@ -378,7 +388,7 @@ header .header-container .p2 {
 .info2 .info-img {
   width: 50%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .info2 .info-img {
     width: 100%;
   }
@@ -397,7 +407,7 @@ footer {
   margin-top: 10%;
   margin-bottom: 5%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   footer {
     text-align: center;
   }
@@ -422,7 +432,7 @@ footer .email {
   justify-content: space-around;
   width: 100%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .first-row {
     flex-direction: column;
     align-items: center;
@@ -441,7 +451,7 @@ footer .email {
   margin-right: auto;
   text-align: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .first-row .tl p {
     padding-top: 7%;
   }
@@ -456,7 +466,7 @@ footer .email {
   margin-right: auto;
   text-align: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .first-row .backend p {
     padding-top: 7%;
   }
@@ -467,7 +477,7 @@ footer .email {
   margin-top: 7%;
   width: 100%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .react-dev-wrapper {
     flex-direction: column;
     align-items: center;
@@ -478,7 +488,7 @@ footer .email {
   width: 33.3%;
   padding: 3%;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .react-dev-wrapper .react-devs {
     width: 50%;
   }
@@ -490,7 +500,7 @@ footer .email {
   font-family: 'Poppins', sans-serif;
   text-align: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 300px) {
   .team .react-dev-wrapper .react-devs p {
     padding-top: 7%;
   }
