--- a/less/webgl.less
+++ b/less/webgl.less
@@ -3,6 +3,12 @@
     margin:0;
     padding: 0;
 
+    p{
+        font-family: @main-font;
+        margin:2%;
+        color:@dark-blue;
+    }
+
     iframe{
         width:100%;
         height: 500px;
