--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Vibur&display=swap');
-//font-family: 'Vibur', cursive;
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Neucha|Rancho&display=swap');
+// font-family: 'Neucha', cursive;
+// font-family: 'Rancho', cursive;
+// font-family: 'Gochi Hand', cursive;
 
 @import url('https://fonts.googleapis.com/css?family=Poppins|Vibur&display=swap');
-//font-family: 'Vibur', cursive;
 //font-family: 'Poppins', sans-serif;
