--- a/less/variables.less
+++ b/less/variables.less
@@ -7,7 +7,7 @@
 
 //fonts
 @main-font: 'Poppins', sans-serif;
-@special-font: 'Vibur', cursive;
+@special-font: 'Neucha', cursive;
 
 //responsive - tablet
 @tablet: ~'(max-width: 800px)';
