--- a/less/about.less
+++ b/less/about.less
@@ -4,12 +4,27 @@
     height: 700px;
     margin: 9% 10%;
     border-radius: 20px;
-    box-shadow: 5px 10px @dark-blue;
     height: auto;
+
+    -webkit-box-shadow: 6px 11px 65px -13px rgba(82,82,82,1);
+    -moz-box-shadow: 6px 11px 65px -13px rgba(82,82,82,1);
+    box-shadow: 6px 11px 65px -13px rgba(82,82,82,1);
+
+    .first-p{
+        font-family: @main-font;
+        font-size:2rem;
+        color: @dark-blue;
+        padding: 5%;
+
+        @media @mobile{
+            font-size: 1.5rem;
+        }
+    }
     .first-row{
         display: flex;
         justify-content: space-around;
         width: 100%;
+        padding-bottom: 5%;
         @media @mobile{
             flex-direction: column;
             align-items: center;
@@ -20,11 +35,15 @@
             padding: 9%;
             img{
                 text-align: center;
+                width:100%;
+                height: auto;
+                border-radius: 200px;
             }
             p{
                 font-family:@main-font;
                 margin-right: auto;
                 text-align: center;
+                padding-top:3%;
                 @media @mobile{
                     padding-top: 7%;
                 }
@@ -39,9 +58,16 @@
                 font-family:@main-font;
                 margin-right: auto;
                 text-align: center;
+                padding-top:3%;
                 @media @mobile{
                     padding-top: 7%;
                 }
+            }
+
+            img{
+                width:100%;
+                height: auto;
+                border-radius: 200px;
             }
         }
     }
@@ -60,11 +86,15 @@
         .react-devs{
             width: 33.3%;
             padding:3%;
+            margin-bottom:5%;
             @media @mobile{
                 width: 50%;
             }
             img{
                 text-align: center;
+                width:100%;
+                height: auto;
+                border-radius: 200px;
             }
             p{
                 font-family:@main-font;
