--- a/less/menu.less
+++ b/less/menu.less
@@ -13,6 +13,8 @@
         font-family: @special-font;
         font-size: 2rem;
         color: @dark-blue;
+        cursor: pointer;
+        text-decoration: none;
         @media @tablet{
             font-size: 3rem;
         }
