--- a/less/info.less
+++ b/less/info.less
@@ -27,6 +27,7 @@
             font-size: 2rem;
             padding-top:5%;
             color: @dark-blue;
+            text-align: center;
             @media @mobile{
                 font-size: 1.5rem;
             }
@@ -36,7 +37,7 @@
             font-size:1.5rem;
             padding:6%;
             color: @dark-blue;
-
+            text-align: center;
             @media @tablet{
                 font-size: 1rem;
             }
